--- a/todo/templates/item_form.html
+++ b/todo/templates/item_form.html
@@ -12,6 +12,8 @@
 
     <form method="POST">
 
+        {% csrf_token %}
+
         <label for="id_name">Name:</label><br>
         <input type="text" id="id_name" name="name"/><br>
         <br>
